--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,6 +24,7 @@
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
+          <a class="page-link" href="{{ '/assets/cv/Christopher-Hannon-CV.pdf' | relative_url }}" target="_blank">CV</a>
         </div>
       </nav>
     {%- endif -%}
